--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>Thi is local repo</h1>
-    <p>This is a new feature</p>
+    <p>This is a new feature (<button></button>)</p>
 </body>
 </html>
